--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>VSLChatter</string>
-	<key>CFBundleName</key>
-	<string>VSLChatter</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.bdgza.vassal-chatter</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -40,5 +36,7 @@
 	<string>0.1</string>
 	<key>CFBundleVersion</key>
 	<string>0.1</string>
+	<key>CFBundleName</key>
+	<string>VASSALChat</string>
 </dict>
 </plist>
