Added ChatPage to PCL/iOS
Open up chat page that connects to module chat. Can send and receive
messages in a preliminary UI.

--- a/VASSALChatter/VASSALChatter.csproj
+++ b/VASSALChatter/VASSALChatter.csproj
@@ -38,6 +38,12 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="getCurrentConnections.txt" />
+    <EmbeddedResource Include="Views\RoomsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ChatPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -67,6 +73,15 @@
     </Compile>
     <Compile Include="ViewModels\ServerViewModel.cs" />
     <Compile Include="Models\ModuleItem.cs" />
+    <Compile Include="ViewModels\ChatViewModel.cs" />
+    <Compile Include="Views\ChatTabsPage.cs" />
+    <Compile Include="Views\RoomsPage.xaml.cs">
+      <DependentUpon>RoomsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ChatPage.xaml.cs">
+      <DependentUpon>ChatPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\ChatMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
