--- a/VASSALChatter/VASSALChatter.csproj
+++ b/VASSALChatter/VASSALChatter.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>ChatPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\ChatMessage.cs" />
+    <Compile Include="Messaging\KeyboardVisibilityMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -107,6 +108,7 @@
     <Folder Include="Networking\" />
     <Folder Include="Messaging\" />
     <Folder Include="Classes\" />
+    <Folder Include="Custom\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
