--- a/iOS/VASSALChatter.iOS.csproj
+++ b/iOS/VASSALChatter.iOS.csproj
@@ -66,7 +66,7 @@
     <DefineConstants>DEBUG;ENABLE_TEST_CLOUD;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodesignKey>iPhone Developer</CodesignKey>
+
     <DeviceSpecificBuild>true</DeviceSpecificBuild>
     <MtouchDebug>true</MtouchDebug>
     <MtouchNoSymbolStrip>true</MtouchNoSymbolStrip>
@@ -113,6 +113,7 @@
   <ItemGroup>
     <Folder Include="Resources\" />
     <Folder Include="Networking\" />
+    <Folder Include="Custom\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -128,6 +129,8 @@
     <Compile Include="Networking\VassalSocketManageriOS.cs" />
     <Compile Include="Networking\NodeAddress.cs" />
     <Compile Include="Networking\ModuleSocket.cs" />
+    <Compile Include="Custom\MainPageRenderer.cs" />
+    <Compile Include="Custom\ChatPageRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\slideout.png" />
