--- a/VASSALChatter/VASSALChatter.csproj
+++ b/VASSALChatter/VASSALChatter.csproj
@@ -83,6 +83,7 @@
     </Compile>
     <Compile Include="Classes\ChatMessage.cs" />
     <Compile Include="Messaging\KeyboardVisibilityMessage.cs" />
+    <Compile Include="UI\NativeChatListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -109,6 +110,7 @@
     <Folder Include="Messaging\" />
     <Folder Include="Classes\" />
     <Folder Include="Custom\" />
+    <Folder Include="UI\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
